--- a/pages/cadastro/index.html
+++ b/pages/cadastro/index.html
@@ -27,7 +27,7 @@
             <i class="fas fa-lock"></i>
             <input type="password" placeholder="Confirmar Senha">
         </div>
-        <button class="primary" onclick="sign_up()">Cadastrar</button>
+        <button class="primary" onclick="cadastrar()">Cadastrar</button>
         <a href="../login/"><span>Logar-se</span></a>
     </div>
 </body>
