Atualizado os links para o Login e Cadastro

--- a/pages/feed.html
+++ b/pages/feed.html
@@ -12,8 +12,8 @@
 
     <body>
         <div id="header-container" class="header-container">
-            <div class="menu" onclick="window.location.href = './pages/login/'"><i class="fas fa-house-user"></i><a>Login</a></div>
-            <div class="menu" onclick="window.location.href = './pages/cadastro/'"><i class="fas fa-user-plus"></i><a>Cadastro</a></div>
+            <div class="menu" onclick="window.location.href = './login/'"><i class="fas fa-house-user"></i><a>Login</a></div>
+            <div class="menu" onclick="window.location.href = './cadastro/'"><i class="fas fa-user-plus"></i><a>Cadastro</a></div>
             <div class="menu" onclick="window.location.href = '#'"><i class="fas fa-rss"></i><a>Feed</a></div>
         </div>
 
